fixed spacing skills section

--- a/css/styles.css
+++ b/css/styles.css
@@ -322,7 +322,7 @@
   height: 100px;
   object-fit: cover;
   border-radius: 3px;
-  margin-bottom: 43px; /* padding bottom */
+  margin-bottom: 100px; /* padding bottom */
 }
 
 .bottom-image {
@@ -344,8 +344,9 @@
 }
 
 .right-section h1 {
-  font-size: 32px;
-  margin-bottom: 20px;
+  font-size: 42px;
+  margin-bottom: 100px;
+  font-weight: 400;
 }
 
 .text-content {
